--- a/kindergarten-portal/package.json
+++ b/kindergarten-portal/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "crypto-js": "^3.1.9-1",
     "dva": "^2.2.3",
+    "echarts": "^4.1.0",
     "umi": "^1.0.0",
     "umi-plugin-dva": "^0.7.1"
   },
