--- a/kindergarten-portal/package.json
+++ b/kindergarten-portal/package.json
@@ -10,6 +10,7 @@
     "crypto-js": "^3.1.9-1",
     "dva": "^2.2.3",
     "echarts": "^4.1.0",
+    "moment-timezone": "^0.5.17",
     "react-player": "^1.6.1",
     "umi": "^1.3.3",
     "umi-plugin-dva": "^0.7.1"
