--- a/infomation/package.json
+++ b/infomation/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "scripts": {
     "start": "umi dev",
-    "build": "SET BASE_URL=/&& umi build",
+    "build": "umi build",
     "lint": "eslint --ext .js src test",
     "precommit": "npm run lint"
   },
