--- a/infomation/package.json
+++ b/infomation/package.json
@@ -11,6 +11,7 @@
     "dva": "^2.2.3",
     "echarts": "^4.1.0",
     "moment-timezone": "^0.5.17",
+    "nativeshare": "^2.1.3",
     "react-player": "^1.6.1",
     "umi": "^1.3.3",
     "umi-plugin-dva": "^0.7.1"
