--- a/infomation/package.json
+++ b/infomation/package.json
@@ -10,6 +10,7 @@
     "crypto-js": "^3.1.9-1",
     "dva": "^2.2.3",
     "echarts": "^4.1.0",
+    "eruda": "^1.5.3",
     "moment-timezone": "^0.5.17",
     "nativeshare": "^2.1.3",
     "react-player": "^1.6.1",
