--- a/infomation/package.json
+++ b/infomation/package.json
@@ -13,6 +13,7 @@
     "eruda": "^1.5.3",
     "moment-timezone": "^0.5.17",
     "nativeshare": "^2.1.3",
+    "qrcode": "^1.2.2",
     "react-player": "^1.6.1",
     "umi": "^1.3.3",
     "umi-plugin-dva": "^0.7.1"
