--- a/infomation/package.json
+++ b/infomation/package.json
@@ -1,30 +1,37 @@
 {
+  "name": "chaobao123",
   "private": true,
   "scripts": {
     "start": "umi dev",
     "build": "umi build",
-    "lint": "eslint --ext .js src test",
-    "precommit": "npm run lint"
+    "test": "umi test",
+    "lint": "eslint --ext .js src mock tests",
+    "precommit": "lint-staged"
   },
-  "dependencies": {
-    "crypto-js": "^3.1.9-1",
-    "dva": "^2.2.3",
-    "echarts": "^4.1.0",
+  "devDependencies": {
+    "babel-eslint": "^9.0.0",
+    "eslint": "^5.4.0",
+    "eslint-config-umi": "^0.1.5",
+    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.11.1",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.2.2",
+    "umi": "^2.0.1",
+    "umi-plugin-react": "^1.0.0-0",
     "eruda": "^1.5.3",
     "moment-timezone": "^0.5.17",
     "nativeshare": "^2.1.3",
-    "qrcode": "^1.2.2",
-    "react-player": "^1.6.1",
-    "umi": "^1.3.3",
-    "umi-plugin-dva": "^0.7.1"
+    "qrcode": "^1.2.2"
   },
-  "devDependencies": {
-    "eslint": "^4.14.0",
-    "eslint-config-umi": "^0.1.1",
-    "eslint-plugin-flowtype": "^2.34.1",
-    "eslint-plugin-import": "^2.6.0",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
-    "eslint-plugin-react": "^7.1.0",
-    "husky": "^0.12.0"
+  "lint-staged": {
+    "*.{js,jsx}": [
+      "eslint --fix",
+      "git add"
+    ]
+  },
+  "engines": {
+    "node": ">=8.0.0"
   }
 }
